fixed align partners

--- a/style.css
+++ b/style.css
@@ -233,12 +233,12 @@ body main {
             background:crimson;
             display:flex;
             justify-content: center;
-            align-items: center;
+            align-content: flex-start;
             flex-wrap:wrap;
         }
 
         body main #projects .partner {
-            width:140px;
+            width:120px;
             height:100px;
             background-color:darkgrey;
             margin:15px;
@@ -336,7 +336,7 @@ body main {
 
             body main #contactus .contactWrap form input,textarea {
                 width:100%;
-                padding: 12px 20px;
+                padding: 12px 10px;
                 box-sizing: border-box;
                 margin:20px 0px;
             }
